# xiaozhi-server-rs

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  shell.nix
nix/: sources.json
src/: config.rs  http.rs  main.rs  protocol.rs  session.rs  speaker_id.rs  text_filter.rs
src/audio/: mod.rs  ogg_opus.rs  opus_decode.rs  opus_duration.rs  opus_silence.rs  silero_vad.rs
src/services/: mock.rs  mod.rs  openai.rs  pi_http.rs  pi_rpc.rs  volcengine.rs  volcengine_asr.rs
system_prompts/: child.md  taiwan.md
